--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.1.2",
     "node-rsa": "^1.0.0",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "truffle-hdwallet-provider": "0.0.5"
   }
 }
